[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/7 Hud elements/left_arrow.png" type="Texture" id=1]
[ext_resource path="res://assets/7 Hud elements/right_arrow.png" type="Texture" id=2]
[ext_resource path="res://assets/7 Hud elements/jump_arrow.png" type="Texture" id=3]
[ext_resource path="res://scenes/hud_elements/controller_arrows.gd" type="Script" id=4]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="jump" type="TouchScreenButton" parent="."]
position = Vector2( 942, 485 )
normal = ExtResource( 3 )

[node name="left_arrow" type="TouchScreenButton" parent="."]
position = Vector2( -20, 492 )
normal = ExtResource( 1 )

[node name="right_arrow" type="TouchScreenButton" parent="."]
position = Vector2( 148, 478 )
normal = ExtResource( 2 )

[connection signal="pressed" from="jump" to="." method="_on_jump_pressed"]
[connection signal="released" from="jump" to="." method="_on_jump_released"]
[connection signal="pressed" from="left_arrow" to="." method="_on_left_arrow_pressed"]
[connection signal="released" from="left_arrow" to="." method="_on_left_arrow_released"]
[connection signal="pressed" from="right_arrow" to="." method="_on_right_arrow_pressed"]
[connection signal="released" from="right_arrow" to="." method="_on_right_arrow_released"]
